--- a/RecomSinqia/RecomSinqia.csproj
+++ b/RecomSinqia/RecomSinqia.csproj
@@ -173,6 +173,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClassificacoesController.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\ColaboradoresController.cs" />
     <Compile Include="Controllers\DificuldadesController.cs" />
     <Compile Include="Controllers\GerenciasController.cs" />
@@ -181,12 +182,14 @@
     <Compile Include="Controllers\ModulosController.cs" />
     <Compile Include="Controllers\PrioridadesController.cs" />
     <Compile Include="Controllers\RecomendacoesController.cs" />
+    <Compile Include="Controllers\SistemasController.cs" />
     <Compile Include="Controllers\TiposFalhasController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Classificacao.cs" />
+    <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Colaborador.cs" />
     <Compile Include="Models\Dificuldade.cs" />
     <Compile Include="Models\Gerencia.cs" />
@@ -195,6 +198,7 @@
     <Compile Include="Models\Modulo.cs" />
     <Compile Include="Models\Prioridade.cs" />
     <Compile Include="Models\Recomendacao.cs" />
+    <Compile Include="Models\Sistema.cs" />
     <Compile Include="Models\TipoFalha.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -305,6 +309,16 @@
     <Content Include="Views\Modulos\Details.cshtml" />
     <Content Include="Views\Modulos\Edit.cshtml" />
     <Content Include="Views\Modulos\Index.cshtml" />
+    <Content Include="Views\Clientes\Create.cshtml" />
+    <Content Include="Views\Clientes\Delete.cshtml" />
+    <Content Include="Views\Clientes\Details.cshtml" />
+    <Content Include="Views\Clientes\Edit.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Sistemas\Create.cshtml" />
+    <Content Include="Views\Sistemas\Delete.cshtml" />
+    <Content Include="Views\Sistemas\Details.cshtml" />
+    <Content Include="Views\Sistemas\Edit.cshtml" />
+    <Content Include="Views\Sistemas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
